force-app/main/default/objects/ReportOutputToken__c/ReportOutputToken__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>帳票送信トークン</label>
</CustomObject>