force-app/main/default/objects/ReportOutputToken__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>取引先ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>