force-app/main/default/objects/ReportOutputToken__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <label>エラーコード</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>