force-app/main/default/objects/ReportOutputToken__c/fields/OutputType__c.field-meta.xml
<CustomField>
    <fullName>OutputType__c</fullName>
    <label>出力タイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>