force-app/main/default/objects/ReportOutputToken__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>レコードID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>