force-app/main/default/objects/ReportOutputToken__c/fields/ReportNo__c.field-meta.xml
<CustomField>
    <fullName>ReportNo__c</fullName>
    <label>帳票番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>