force-app/main/default/objects/ReportOutputToken__c/fields/ResultCode__c.field-meta.xml
<CustomField>
    <fullName>ResultCode__c</fullName>
    <label>結果コード</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>